attempting to edit home page

--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,24 @@
 ---
 title: "Angela Larson"
-about: 
-  template: jolla
+image: images/headshot-02.JPG
+toc: false
+about:
+  template: trestles
+  image-shape: round
+  image-width: 20em
+  links: 
+    - text: GitHub
+      href: https://github.com/angelalarson
+      icon: "github"
+      target: _blank
+    - text: LinkedIn
+      href: www.linkedin.com/in/angela-larson-a39659240
+      icon: "linkedin"
+      target: _blank
+    - text: Email
+      href: mailto::angelalar1715@gmail.com
+      icon: "envelope"
+      target: _blank
 ---
 
 This is a short blurb about myself :D
