I edited the titles of the pages, reorganized them, and edited the title page

--- a/index.qmd
+++ b/index.qmd
@@ -18,12 +18,10 @@ about:
 ---
 ## About Me!
 
-I am a fourth-year undergraduate at UC Santa Barbara majoring in Earth Science with an emphasis in Climate and Environment and a Field-based Undergraduate Engagement through Research, Teaching, and Education (FUERTE) fellow. 
+I am a fourth-year undergraduate at UC Santa Barbara majoring in Earth Science with an emphasis in Climate and Environment and a Field-based Undergraduate Engagement through Research, Teaching, and Education (FUERTE) fellow. Beyond my academics, I am also on the leadership board for the Muckers Earth Science club and have served as president of VocalMotion, UCSB Women's A Cappella group, for the past two years. Furthermore, I have been a member of the UCSB Women's Rugby team for four years. 
 
 ## Education
 
 University of California, Santa Barbara – Earth Science, emphasis in Climate and Environment, B.S. - 2025
 
 Tulane University - Earth and Environmental Sciences PhD (starting Fall 2025)
-
-## Research
