--- a/about.qmd
+++ b/about.qmd
@@ -2,6 +2,13 @@
 title: "About"
 ---
 
-About this site
+# About Me
 
-please let this work.
+## Research
+Here is where I will tlak about current reasearch of OAE, and upcoming movement to Tulane.
+
+## Teaching
+Here is where I will talk about FUERTE mentorship and 114.
+
+## Rugby
+Here is where I will talk about my sport <3 and my experience with injuries and U23
