--- a/about.qmd
+++ b/about.qmd
@@ -2,11 +2,12 @@
 title: "About Me"
 ---
 
-## Research
-Here is where I will tlak about current reasearch of OAE, and upcoming movement to Tulane.
-
 ## Teaching
-Here is where I will talk about FUERTE mentorship and 114.
+I am quite passionate about teaching and mentorship, taking on multiple roles throughout my time at UC Santa Barbara. I have served as a FUERTE Teaching Assistant, helping younger cohorts in developing research questions and carrying out mini projects. Furthermore, I was a learning assistant for Earth 114 - Geomaterials in Fall 2024, assisting in lab periods with mineral identification and chemistry in addition to holding weekly office hours. As a graduate student at Tulane University, I will continue to grow my skills as an educator as I pursue my ultimate goal of becoming a professor.
+
 
 ## Rugby
-Here is where I will talk about my sport <3 and my experience with injuries and U23
+I started playing rugby in my first year at UC Santa Barbara, finding an immediate home on the team and a passion for this amazing sport. When I tore my ACL shortly after joining, I committed myself to strength training and the return-to-play process. In my time off, I began specializing in specific skills such as kicking and quickly earned a starting position on the team once I returned to playing. Two years after my injury, I was selected to represent my division playing for the Pacific South Griffins, a team composed of the top collegiate women's rugby players in Southern California and Arizona. I played in the U23 All Stars tournament in Boston, MA in June 2024, where we placed second in our tier. As I finish up my time playing rugby at UC Santa Barbara, I intend to take up coaching to continue contributing to this amazing community.
+
+## Outdoor Education
+
