--- a/index.qmd
+++ b/index.qmd
@@ -24,4 +24,4 @@ I am a fourth-year undergraduate at UC Santa Barbara majoring in Earth Science w
 
 University of California, Santa Barbara – Earth Science, emphasis in Climate and Environment, B.S. - 2025
 
-Tulane University - Earth and Environmental Sciences PhD (starting Fall 2025)
+Tulane University - Earth and Environmental Sciences PhD (starting Fall 2025) as a Lousiana Board of Regents/SREB Doctoral Fellow
