--- a/Rugby.qmd
+++ b/Rugby.qmd
@@ -6,4 +6,6 @@ format: html
 ## Oceanographic
 
 ## Geologic
+My enrollment in EARTH 104A - Introduction to Geologic Field Methods culminated in a quarter long Santa Barbara Field Guide project, mapping the local structural and stratigraphic Santa Barbara geology. Maps were overlain using local Dibblee maps and QGIS in addition to Inkscape for visual editing. In situ measurements were taken when possible, field notebook images were provided as supporting evidence. 
 
+[insert link]
