--- a/about.qmd
+++ b/about.qmd
@@ -10,4 +10,4 @@ I am quite passionate about teaching and mentorship, taking on multiple roles th
 I started playing rugby in my first year at UC Santa Barbara, finding an immediate home on the team and a passion for this amazing sport. When I tore my ACL shortly after joining, I committed myself to strength training and the return-to-play process. In my time off, I began specializing in specific skills such as kicking and quickly earned a starting position on the team once I returned to playing. Two years after my injury, I was selected to represent my division playing for the Pacific South Griffins, a team composed of the top collegiate women's rugby players in Southern California and Arizona. I played in the U23 All Stars tournament in Boston, MA in June 2024, where we placed second in our tier. As I finish up my time playing rugby at UC Santa Barbara, I intend to take up coaching to continue contributing to this amazing community.
 
 ## Outdoor Education
-
+In my formative years, I attended Two Sentinels Girl Scout Camp, an outdoor backpacking camp in the Sierra Nevada. Prior to my first year at UC Santa Barbara, I became a camp counselor at Two Sentinels for the first time, sparking my love for outdoor education. Influenced by my experiences, I enrolled in a six month outdoor leadership training course my first year at UC Santa Barbara where I was exposed to a variety of outdoor activities and education. This has ultimately lead to my passion for fieldwork and providing equal opportunities for outdoor education. In many ways, I study earth and environmental sciences because of my outdoor education influences, providing me with an outlet to turn my hobbies and passions into a career.
