--- a/Rugby.qmd
+++ b/Rugby.qmd
@@ -11,6 +11,17 @@ Through FUERTE and local Plumes and Blooms cruises with the Iglesias-Rodriguez l
 ## Geologic
 My enrollment in EARTH 104A - Field Methods in Geology culminated in a quarter long Santa Barbara Field Guide project, mapping the local structural and stratigraphic Santa Barbara geology over the course of six lab periods. Maps were overlain with local Dibblee maps using QGIS and Inkscape for visual editing. Strike and dip measurements were taken using both a Brunton compass and Clino app for IPhone. A hand lens and geologic field notebook was used for mineral identification and grain size determination. Figures and images developed in Inkscape were adapted from *in situ* measurements.
 
-#### Interested in reading my Santa Barbara Field Guide? Check out the full project [here](images/104a_guide.pdf)
+**Interested in reading my Santa Barbara Field Guide? Check out the full project [here](images/104a_guide.pdf)**
 
-[insert images]
+#### Strike and Dip Mapping
+Below is a map of all strike and dip measurements I took for the three mapping projects measured using the Clino app. Specifically, the Ellwood Beach and Camino Cielo Rd mapping measurements are featured in the Santa Barbara Field Guide linked above. Colors are determined by the sedimentary rock formation name for these regions.
+
+The EARTH 104A course included a four day field trip to the Mojave Desert, where we completed a handwritten mapping project. These measurements were not included in the Santa Barbara Field Guide. Colors are grouped by rock type for this region.
+
+
+<div style="margin-top: 2em; overflow: hidden;">
+  <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1rhnMzM5WsfT2rC441702xA-zuFqWYRM&ehbc=2E312F" 
+  width="640" 
+  height="480"></iframe>
+</div>
+
