--- a/Rugby.qmd
+++ b/Rugby.qmd
@@ -13,11 +13,12 @@ My enrollment in EARTH 104A - Field Methods in Geology culminated in a quarter l
 
 **Interested in reading my Santa Barbara Field Guide? Check out the full project [here](images/104a_guide.pdf)**
 
-#### Strike and Dip Mapping
-Below is a map of all strike and dip measurements I took for the three mapping projects measured using the Clino app. Specifically, the Ellwood Beach and Camino Cielo Rd mapping measurements are featured in the Santa Barbara Field Guide linked above. Colors are determined by the sedimentary rock formation name for these regions.
+#### Interactive Strike and Dip Location Map
+Below is a map of all strike and dip measurements I took for the three mapping projects measured using the Clino app. Specifically, the Ellwood Beach and Camino Cielo Rd mapping measurements are featured in the Santa Barbara Field Guide linked above.
 
-The EARTH 104A course included a four day field trip to the Mojave Desert, where we completed a handwritten mapping project. These measurements were not included in the Santa Barbara Field Guide. Colors are grouped by rock type for this region.
+The EARTH 104A course included a four day field trip to the Mojave Desert, where we completed a handwritten mapping project. These measurements were not included in the Santa Barbara Field Guide.
 
+Each pin represents a single strike and dip measurement. When clicked upon, each pin displays the strike and dip measurement in addition to data regarding plane type (bedding or fault) and location. Color represents sedimentary rock formation name and rock type for Santa Barbara and Mojave Desert locations, respectively. 
 
 <div style="margin-top: 2em; overflow: hidden;">
   <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1rhnMzM5WsfT2rC441702xA-zuFqWYRM&ehbc=2E312F" 
