--- a/Projects.qmd
+++ b/Projects.qmd
@@ -10,39 +10,75 @@ Carbon dioxide removal (CDR) has become an increasingly essential area of resear
 #### Find my complete senior honors thesis [here](/images/include link.pdf)
 
 ## Thesis Code and Data Visualization
-The below visualizations represent the physiological data collected during the Fall 2024 experiment and analyzed in Winter 2025 for my thesis document. For a full scope of the data and visualizations, view the link in the section above.
+The below visualization represents only a small portion of the code written for this project. Specifically, this graph is Total Alkalinity (TA) plotted over time. This data collected was during the Fall 2024 experiment and analyzed in Winter 2025 for my thesis document. For a full scope of the data and visualizations, view the link in the section above.
 
-### a. Particulate Inorganic Carbon (PIC)
-#### Code
+```{r load packages}
+#| message: false
 
-#### Visualization
+library (tidyverse)
+library (janitor)
+library (cowplot)
+library(ggh4x)
+library(viridis)
+library(viridisLite)
+library(ggpubr)
 
-#### Figure caption
+carb_chem <- read_csv("carb_chem_data.csv") %>% # reading in csv
+  clean_names()
+```
+Here is the code loading the necessary packages and data.
 
-### b. Particulate Organic Carbon (POC)
-#### Code
+```{r summarize data for plotting}
+#| message: false
 
-#### Visualization
+TA_summ <- carb_chem %>% # creating new object from carb_chem data frame
+  select(day, condition, treatment, ta_in_mmol_kg_sw) %>% # selecting specific parameter
+  group_by(day, condition, treatment) %>% # grouping by day, condition, and treatment
+ summarise(
+    TA_mean = round(mean(ta_in_mmol_kg_sw), 2), # calculating mean
+    TA_sd = round(sd(ta_in_mmol_kg_sw), 2), # calculating standard deviation
+    n = n()
+  )
+```
+This code created a new object called TA_summ, extracting only the TA column in addition to other necessary parameters such as day and treatment.
 
-#### Figure caption
-
-### c. Particulate Organic Nitrogen (PON)
-#### Code
-
-#### Visualization
-
-#### Figure caption
-
-### d. PIC:POC
-#### Code
-
-#### Visualization
-
-#### Figure caption
-
-### e. POC:PON
-#### Code
-
-#### Visualization
-
-#### Figure caption
+```{r}
+#| message: false
+ggplot(data = TA_summ,
+       aes(x = factor(day),
+           y = TA_mean,
+           color = interaction(treatment, condition),
+           linetype = condition,
+           group = interaction(treatment, condition))) +
+ scale_color_manual(
+     values = c(
+      "bru.abio" = "violet",
+      "bru.bio"  = "violetred",
+      "ctrl.abio" = "cornflowerblue",
+      "ctrl.bio"  = "mediumblue"
+    ),
+    labels = c(
+      "bru.abio" = "Brucite (Abiotic)",
+      "bru.bio"  = "Brucite (Biotic)",
+      "ctrl.abio" = "Control (Abiotic)",
+      "ctrl.bio"  = "Control (Biotic)"
+    )
+  ) +
+  scale_linetype_manual(
+    values = c("abio" = "dotted", "bio" = "solid"),
+    labels = c("abio" = "Abiotic", "bio" = "Biotic")
+  ) +
+  geom_point(size = 4) +
+  geom_line(linewidth = 1) +
+  geom_errorbar(aes(ymin = TA_mean - TA_sd,
+                    ymax = TA_mean + TA_sd),
+                width = 0.05,
+                linewidth = 1) +
+  labs(x = "Time (d)",
+       y = expression(paste("Total Alkalinity (", mu, "mol kg"^{-1}, ")")),
+       color = "Color",
+       linetype = "Line Type") +
+  theme_cowplot() +
+  theme(legend.title = element_blank())
+```
+This code plotted my data.
