--- a/about.qmd
+++ b/about.qmd
@@ -11,7 +11,7 @@ I am quite passionate about teaching and mentorship, taking on multiple roles th
 
 ![The green mineral actinolite from Earth 114 lab period.](images/actinolite.png){group="about"}
 
-![Photo taken with a frog in the Hoover Wilderness, September 2024.](images/frog1.png){group="about"}
+![Photo taken with a frog in the Hoover Wilderness during a FUERTE field trip, September 2024.](images/frog1.png){group="about"}
 
 :::
 
